@@ -33,7 +33,7 @@
     <h1>ECHI Converter</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/echi-converter"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/echi-converter" class="numbers">0.1.1</a>
+      <a href="http://rubyforge.org/projects/echi-converter" class="numbers">0.2.0</a>
     </div>
     <h1>&#x2192; &#8216;echi-converter&#8217;</h1>
 
@@ -61,7 +61,7 @@
 		<li>Generate your schema via ActiveRecord Migrations</li>
 		<li>Fetch Binary or <span class="caps">ASCII CSV</span> files from the Avaya <span class="caps">CMS</span> platform via <span class="caps">FTP</span></li>
 		<li>Convert from the defined Binary format to <span class="caps">ASCII</span></li>
-		<li>Insert the records into the defined database table</li>
+		<li>Insert the records into the defined database table using database transactions, via ActiveRecord, on a per file basis to support recovery on failure</li>
 		<li>Change schema structure via <span class="caps">YML</span> configuration file to accommodate various releases of the <span class="caps">ECHI</span> format</li>
 	</ol>
 
@@ -86,6 +86,7 @@
 		<li><a href="http://daemons.rubyforge.org/">Daemons v1.0.7+</a></li>
 		<li><a href="http://fastercsv.rubyforge.org/">FasterCSV v1.2.0+</a></li>
 		<li><a href="http://rake.rubyforge.org/">Rake v0.7.3+</a></li>
+		<li><a href="http://rubyforge.org/projects/seattlerb/">Hoe v1.2.2+</a></li>
 	</ol>
 
 
@@ -175,6 +176,12 @@
 	</ol>
 
 
+	<h2>Screencast</h2>
+
+
+	<p>You may view the screencast on howto install and use the <span class="caps">ECHI</span>-Converter <a href="http://www.screencast.com/t/lQQkIVkUZMr">here</a>.</p>
+
+
 	<h2>Forum</h2>
 
 
@@ -201,7 +208,7 @@
 
 	<p>Comments are welcome. Send an email to <a href="mailto:jason@goecke.net">jason [at] goecke.net</a>.</p>
     <p class="coda">
-      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 17th September 2007<br>
+      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 23rd October 2007<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
