@@ -76,3 +76,4 @@
   * If the 'echi_ftp_directory' option in application.yml is left blank/nil, the system will not attempt a change directory
   * The system now builds the files to process array from the to_process directory instead of the ftp list, to allow for better recovery if a failure occurs
 * Bug fix(es):
+  * Fixed bug #14585 requiring Hoe for the install
